@@ -8,9 +8,11 @@ Version 1.3.15+svn:
    * Fixed MP saves loadind to choose correct human side (bug #10894)
    * display reloaded games in yellow instead of green in the game list
      as they are also a kind of already running games
+   * Made era not required while loading save game
  * miscellaneous and bug fixes:
    * Moved destruction of conditional object before the mutex. This should 
      fix random crash in network disconnect.
+   * Fixed reference to invalid pointer in attack::attack
 
 Version 1.3.15:
  * language and i18n:
